--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
-<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture bg-banniere" id="bloc-6">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
@@ -79,37 +79,31 @@
 <!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-					<div class="form-group">
-						<label>
-							Nom
-						</label>
-						<input id="name" class="form-control" required />
-					</div>
-					<div class="form-group">
-						<label>
-							Adresse email
-						</label>
-						<input id="email" class="form-control" type="email" required />
-					</div>
-					<div class="form-group">
-						<label>
-							Comment nous avez-vous connu ?
-						</label>
-						<input class="form-control" type="email" required id="input_504" />
-					</div>
-					<div class="form-group">
-						<label>
-							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-						Envoyer
-					</button>
-				</form>
-			</div>
+	  <div class="row">
+		<div class="col-sm-6">
+		  <form id="form_1" novalidate="" success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+			<div class="form-group">
+			  <label> Nom </label>
+			  <input id="name" class="form-control" required="">
+			<div class="help-block"></div></div>
+			<div class="form-group">
+			  <label> Adresse email </label>
+			  <input id="email" class="form-control" type="email" required="">
+			<div class="help-block"></div></div>
+			<div class="form-group">
+			  <label> Comment nous avez-vous connu ? </label>
+			  <input class="form-control" type="email" required="" id="input_504">
+			<div class="help-block"></div></div>
+			<div class="form-group">
+			  <label>
+				Brief de votre projet (Ajoutez autant de détails que
+				nécessaire)<br> </label><textarea id="message" class="form-control" rows="4" cols="50" required=""></textarea>
+			<div class="help-block"></div></div>
+			<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+			  Envoyer
+			</button>
+		  </form>
+		</div>
 			<div class="col-sm-6">
 				<p>
 					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
