--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 				<h1 class="text-center hero-bloc-text tc-white">
 					Agence La Panthère - Parlons web design !
 				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
+				<p class="text-center mg-lg tc-white tight-width-whitespace paragrapheContact"> 
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
@@ -88,7 +88,7 @@
 			<div class="help-block"></div></div>
 			<div class="form-group">
 			  <label> Adresse email </label>
-			  <input id="email" class="form-control" type="email" required="">
+			  <input id="email" class="form-control" type="email" required="" multiple placeholder="example@mail.com">
 			<div class="help-block"></div></div>
 			<div class="form-group">
 			  <label> Comment nous avez-vous connu ? </label>
