--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,13 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
+	<script src="./js/jquery.touchSwipe.js"></script>
+	<script src="./js/gmaps.js"></script>
     <title>Contact - Agence La Panthère</title>
 
     
@@ -81,24 +83,24 @@
 	<div class="container bloc-lg">
 	  <div class="row">
 		<div class="col-sm-6">
-		  <form id="form_1" novalidate="" success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+		  <form id="form_1" novalidate="" success-msg="Ton message a été envoyé" fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas, veuillez nous excuser pour le dérangement !" class="error">
 			<div class="form-group">
 			  <label> Nom </label>
-			  <input id="name" class="form-control" required="">
-			<div class="help-block"></div></div>
+			  <input id="name" name="name" class="form-control" required aria-invalid="true">
+		</div>
 			<div class="form-group">
 			  <label> Adresse email </label>
-			  <input id="email" class="form-control" type="email" required="" multiple placeholder="example@mail.com">
-			<div class="help-block"></div></div>
+			  <input id="email" class="form-control" type="email" required aria-invalid="true" placeholder="example@mail.com">
+		</div>
 			<div class="form-group">
 			  <label> Comment nous avez-vous connu ? </label>
-			  <input class="form-control" type="email" required="" id="input_504">
-			<div class="help-block"></div></div>
+			  <input class="form-control" type="email" required aria-invalid="true" id="input_504">
+			</div>
 			<div class="form-group">
 			  <label>
 				Brief de votre projet (Ajoutez autant de détails que
-				nécessaire)<br> </label><textarea id="message" class="form-control" rows="4" cols="50" required=""></textarea>
-			<div class="help-block"></div></div>
+				nécessaire)<br> </label><textarea id="message" class="form-control" rows="4" cols="50" required aria-invalid="true"></textarea>
+			</div>
 			<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 			  Envoyer
 			</button>
