--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
 		</div>
 			<div class="form-group">
 			  <label> Comment nous avez-vous connu ? </label>
-			  <input class="form-control" type="email" required aria-invalid="true" id="input_504">
+			  <input class="form-control" type="text" required aria-invalid="true" id="input_504">
 			</div>
 			<div class="form-group">
 			  <label>
