--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,10 @@
 					<a href="index.html">Accueil</a>
 				</li>
 				<li>
+					<a href="index.html#NotreMétier">Notre métier</a>
+				</li>
+				<li>
+					<a href="index.html#NosProjets">Nos projets</a>
 				</li>
 				<li>
 					<a href="contact.html">Contact</a>
