--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 					<a href="index.html">Accueil</a>
 				</li>
 				<li>
+					<a href="#NotreMétier">Notre métier</a>
+				</li>
+				<li>
+					<a href="#NosProjets">Nos projets</a>
 				</li>
 				<li>
 					<a href="contact.html">Contact</a>
@@ -79,7 +83,7 @@
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+<div class="bloc bgc-white l-bloc" id="NotreMétier">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -149,7 +153,7 @@
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="NosProjets">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -158,7 +162,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="Image/Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="Image/Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon.jpg" alt="Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon" /></a>
+				<a href="#" data-lightbox="Image/Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="Image/Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
