--- a/contact.html
+++ b/contact.html
@@ -37,18 +37,16 @@
 	<div class="container bloc-sm">
 	  <nav class="navbar row">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-		  <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
+			<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Agence La Panthère Entreprise Web Design à Lyon" height="40" /></a>
+			<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-haspopup="true">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
 		  </button>
 		</div>
 		<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 			<ul class="site-navigation nav navbar-nav">
-				<li>
-					<a href="index.html">Accueil</a>
-				</li>
 				<li>
 					<a href="index.html#NotreMétier">Notre métier</a>
 				</li>
@@ -90,29 +88,31 @@
 		  <form id="form_1" novalidate="" success-msg="Ton message a été envoyé" fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas, veuillez nous excuser pour le dérangement !" class="error">
 			<div class="form-group">
 			  <label> Nom </label>
-			  <input id="name" name="name" class="form-control" required aria-invalid="true">
+			  <input id="name" name="name" class="form-control" required aria-required="true" aria-label="Indiquez votre nom">
 		</div>
 			<div class="form-group">
 			  <label> Adresse email </label>
-			  <input id="email" class="form-control" type="email" required aria-invalid="true" placeholder="example@mail.com">
+			  <input id="email" class="form-control" type="email" required  placeholder="example@mail.com" aria-required="true" aria-label="Indiquez votre mail">
 		</div>
 			<div class="form-group">
 			  <label> Comment nous avez-vous connu ? </label>
-			  <input class="form-control" type="text" required aria-invalid="true" id="input_504">
+			  <input class="form-control" type="text" required  id="input_504" aria-required="true" aria-label="Indiquez comment vous nous avez connu">
 			</div>
 			<div class="form-group">
 			  <label>
 				Brief de votre projet (Ajoutez autant de détails que
-				nécessaire)<br> </label><textarea id="message" class="form-control" rows="4" cols="50" required aria-invalid="true"></textarea>
+				nécessaire)<br> </label><textarea id="message" class="form-control" rows="4" cols="50" required aria-required="true" aria-label="décrivez votre projet avec des détails"></textarea>
 			</div>
-			<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+			<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="envoyez votre message">
 			  Envoyer
 			</button>
 		  </form>
 		</div>
 			<div class="col-sm-6">
 				<p>
-					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+				<p>contact@agencelapanthere.com <a href="mailto:contact@agencelapanthere.com"  aria-label="contacter l'agence par mail"></a></p>
+				2 place Sathonay 69001 Lyon
+				<br>Ouvert de 9h à 18h, du lundi au vendredi
 				</p>
 			</div>
 		</div>
@@ -131,27 +131,27 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
+					Agence La Panthère - Agence web design basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com" aria-label="lien vers twitter" title="twitter" target="_blank" rel="noreferrer noopener"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com" aria-label="lien vers facebook" title="facebook" target="_blank" rel="noreferrer noopener"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://www.dribbble.com" aria-label="lien vers dribbble" title="dribbble" target="_blank" rel="noreferrer noopener"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com" aria-label="lien vers instagram" title="instagram" target="_blank" rel="noreferrer noopener"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
