--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/jqBootstrapValidation.js"></script>
+	<script src="./js/formHandler.js"></script>
+	<script src="./js/jquery.touchSwipe.js"></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
-
-    
+    <title> La Panthère - Entreprise Web Design Lyon</title>
 <!-- Analytics -->
  
 <!-- Analytics END -->
