--- a/contact.html
+++ b/contact.html
@@ -109,9 +109,8 @@
 		  </form>
 		</div>
 			<div class="col-sm-6">
-				<p>
 				<p>contact@agencelapanthere.com <a href="mailto:contact@agencelapanthere.com"  aria-label="contacter l'agence par mail"></a></p>
-				2 place Sathonay 69001 Lyon
+				<p>2 place Sathonay 69001 Lyon
 				<br>Ouvert de 9h à 18h, du lundi au vendredi
 				</p>
 			</div>
@@ -164,6 +163,6 @@
 </div>
 <!-- Principal conteneur END -->
     
-
+</div>
 </body>
 </html>
