--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		</div>
 	  </nav>
 	</div>
+</div>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
@@ -258,6 +259,6 @@
 </div>
 <!-- Principal conteneur END -->
     
-
+</div>
 </body>
 </html>
