--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/CréationidentitevisuelLyon.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/CréationidentitevisuelLyon.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon" /></a>
+				<a href="#" data-lightbox="img/CreationidentitevisuelLyon.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/CreationidentitevisuelLyon.jpg" class="img-responsive portfolio-thumb" alt="Agence La Panthère Entreprise Web Design à Lyon - Création d'identité visuel à Lyon" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
