--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		</div>
 	  </nav>
 	</div>
+</div>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
@@ -218,6 +219,7 @@
 				<p class="text-center white">
 					Agence La Panthère - Agence web design basée à Lyon.<br>
 				</p>
+				
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
@@ -238,12 +240,12 @@
 						<div class="text-center">
 							<a class="social" href="https://www.instagram.com" aria-label="lien vers instagram" title="instagram" target="_blank" rel="noreferrer noopener"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
-				
-		
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 <!-- Footer - bloc-8 END -->
 
 </div>
