--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 		  </form>
 		</div>
 			<div class="col-sm-6">
-				<p>contact@agencelapanthere.com <a href="mailto:contact@agencelapanthere.com"  aria-label="contacter l'agence par mail"></a></p>
+				<p><a href="mailto:contact@agencelapanthere.com"  aria-label="contacter l'agence par mail">contact@agencelapanthere.com</a></p>
 				<p>2 place Sathonay 69001 Lyon
 				<br>Ouvert de 9h à 18h, du lundi au vendredi
 				</p>
